16/09 Request de compra produtcos andando

--- a/src/main/resources/static/web/assets/css/shop.css
+++ b/src/main/resources/static/web/assets/css/shop.css
@@ -4,3 +4,10 @@ body {
     font-family: "Poppins", sans-serif;
     color: #444444;
 }
+
+.banner-bg{
+    background-image: url(../images/bannertest.jpg);
+    background-size: contain;
+    background-position: bottom;
+    background-repeat: no-repeat;
+}
