--- a/src/main/resources/static/web/assets/css/style.css
+++ b/src/main/resources/static/web/assets/css/style.css
@@ -19,13 +19,13 @@
 /*===========================
     1. COMMON css 
 ===========================*/
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+
 body {
-  font-family: "Lato", sans-serif;
-  font-weight: normal;
-  font-style: normal;
-  color: #585F6E;
+    font-family: "Poppins", sans-serif;
+    color: #444444;
 }
+
 
 * {
   margin: 0;
@@ -149,6 +149,9 @@ p {
   background-color: #ffbf00;
 }
 
+.yellow-color{
+  color:#ffbf00
+}
 @media (max-width: 767px) {
   .main-btn {
     padding: 0 25px;
