notificaciones al superar stock + alertas + botones en carrito de compras

--- a/src/main/resources/static/web/assets/css/shop.css
+++ b/src/main/resources/static/web/assets/css/shop.css
@@ -5,10 +5,20 @@ body {
     color: #444444;
 }
 
-.truncate-shop{
+.truncate-shop {
     width: 100%;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
     overflow: hidden;
+}
+
+.v-enter-active,
+.v-leave-active {
+    transition: opacity 0.5s ease;
+}
+
+.v-enter-from,
+.v-leave-to {
+    opacity: 0;
 }
