--- a/src/main/resources/static/web/assets/css/style.css
+++ b/src/main/resources/static/web/assets/css/style.css
@@ -19,11 +19,12 @@
 /*===========================
     1. COMMON css 
 ===========================*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
-
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap");
 body {
-    font-family: "Poppins", sans-serif;
-    color: #444444;
+  font-family: "Lato", sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  color: #585F6E;
 }
 
 
