--- a/src/main/resources/static/web/assets/css/style.css
+++ b/src/main/resources/static/web/assets/css/style.css
@@ -342,6 +342,11 @@ i, span, a {
   display: block;
   -webkit-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
+  /* overflow: hidden;
+  max-width: 5ch;
+  text-overflow: ellipsis;
+  white-space: nowrap; */
+  
 }
 
 .single_schedule .time {
