cambios en la landing (vide)

--- a/src/main/resources/static/web/assets/css/style.css
+++ b/src/main/resources/static/web/assets/css/style.css
@@ -1607,3 +1607,8 @@ p.form-message.success.form-message.error, p.form-message.error.form-message.err
     display: none;
   }
 }
+
+
+video{
+  width: 100%;
+}
