--- a/src/main/resources/static/web/assets/css/style.css
+++ b/src/main/resources/static/web/assets/css/style.css
@@ -9,10 +9,9 @@
 
     CSS INDEX
     ===================
-
-    01. Theme default CSS
+  01. Theme default CSS
 	02. Header
-    03. Hero
+  03. Hero
 	04. Footer
 
 -----------------------------------------------------------------------------------*/
@@ -79,6 +78,10 @@ h6 {
   margin: 0px;
 }
 
+.h4Balcam{
+  color: #D2D2D2;
+}
+
 h1 {
   font-size: 48px;
 }
@@ -124,6 +127,9 @@ p {
   width: 100%;
   height: 100%;
 }
+
+/*===== INDEX Style VIDEO presentation=====*/
+
 
 /*===== All Button Style =====*/
 .main-btn {
@@ -645,6 +651,7 @@ h4 {
 ===========================*/
 /*===== NAVBAR =====*/
 .navbar-area {
+  
   position: absolute;
   top: 0;
   left: 0;
@@ -652,13 +659,24 @@ h4 {
   z-index: 99;
   -webkit-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
-  background-color: #fff;
+  background-color: 1e1e1e;
 }
+  .navbar-areaBlog{
+    background-color:rgba(8, 8, 8, 0.884); 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 99;
+    -webkit-transition: all 0.3s ease-out 0s;
+    transition: all 0.3s ease-out 0s;
+    
+  }
 
 .sticky {
   position: fixed;
   z-index: 99;
-  background-color: #fff;
+  background-color:rgba(8, 8, 8, 0.884);
   -webkit-box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
   box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
   -webkit-transition: all 0.3s ease-out 0s;
@@ -786,7 +804,7 @@ h4 {
 .navbar-nav .nav-item a {
   font-size: 16px;
   font-weight: 400;
-  color: #585F6E;
+  color: #f2f4f7;
   -webkit-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
   padding: 30px 0;
@@ -996,7 +1014,8 @@ h4 {
 .header-hero {
   position: relative;
   z-index: 5;
-  height: 700px;
+ /*  height: 700px; */
+  
 }
 
 @media only screen and (min-width: 1400px) {
