--- a/src/main/resources/static/web/assets/css/shop.css
+++ b/src/main/resources/static/web/assets/css/shop.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap");
 
 body {
-    font-family: "Poppins", sans-serif;
+    font-family: "Lato", sans-serif;
     color: #444444;
 }
 
@@ -13,10 +13,15 @@ body {
     overflow: hidden;
 }
 
+.bg-body{
+    background-color: #403d3dd0;
+}
+
 .v-enter-active,
 .v-leave-active {
     transition: opacity 0.5s ease;
 }
+
 
 .v-enter-from,
 .v-leave-to {
