--- a/src/main/resources/static/web/assets/css/style.css
+++ b/src/main/resources/static/web/assets/css/style.css
@@ -82,6 +82,10 @@ h6 {
   color: #D2D2D2;
 }
 
+.lni{
+  color: #ffbf00;
+}
+
 h1 {
   font-size: 48px;
 }
@@ -95,7 +99,7 @@ h3 {
 }
 
 h4 {
-  font-size: 22px;
+  font-size: 21px;
 }
 
 h5 {
@@ -383,7 +387,7 @@ i, span, a {
 }
 
 h4 {
-  font-size: 22px;
+  font-size: 21px;
 }
 
 h4 {
