login andando con su js

--- a/src/main/resources/static/web/assets/css/loginandsignup.css
+++ b/src/main/resources/static/web/assets/css/loginandsignup.css
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
 
 body{
-    background-image: url(/assets/images/fondologin.jpg) !important;
+    background-image: url(../images/fondologin.jpg) !important;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
@@ -22,10 +22,12 @@ body{
 .bg-login{
     background-color: #191c25a7;
   }
+
 a {
 	cursor: pointer;
   transition: all 200ms linear !important;
 }
+
 a:hover {
 	text-decoration: none !important;
 }
