--- a/src/main/resources/static/web/assets/css/loginandsignup.css
+++ b/src/main/resources/static/web/assets/css/loginandsignup.css
@@ -123,7 +123,7 @@ h6 span{
 .card-front, .card-back {
   width: 100%;
   height: 100%;
-  background-color: #2a2b38;
+  background-color: #1f2029;
   background-position: bottom center;
   background-repeat: no-repeat;
   background-size: 300%;
@@ -174,7 +174,7 @@ h6 span{
   letter-spacing: 0.5px;
   outline: none;
   color: #c4c3ca;
-  background-color: #1f2029;
+  background-color: rgba(21,21,21,.2)!important;
   border: none;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
@@ -270,17 +270,17 @@ h6 span{
   text-align: center !important;
   border: none;
   background-color: #ffcf3e !important;
-  color: #102770 !important;
+  color: #464646 !important;
   box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
 }
 .btn:active,
 .btn:focus{  
   background-color: #102770 !important;
   color: #ffd760 !important;
-  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2) !important;
+  box-shadow: 0 8px 24px 0 rgba(51, 112, 16, 0.2) !important;
 }
 .btn:hover{  
-  background-color: #102770 !important;
+  background-color: #a5a5a1 !important;
   color: #ffd760 !important;
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2) !important;
 }
