alerta mail verificado y loader

--- a/src/main/resources/static/web/assets/css/loginandsignup.css
+++ b/src/main/resources/static/web/assets/css/loginandsignup.css
@@ -275,9 +275,9 @@ h6 span{
 }
 .btn:active,
 .btn:focus{  
-  background-color: #102770 !important;
+  background-color: #484847 !important;
   color: #ffd760 !important;
-  box-shadow: 0 8px 24px 0 rgba(51, 112, 16, 0.2) !important;
+  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2) !important;
 }
 .btn:hover{  
   background-color: #a5a5a1 !important;
