--- a/src/main/resources/static/web/assets/css/checkout.css
+++ b/src/main/resources/static/web/assets/css/checkout.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
-
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap");
 body {
-    font-family: "Poppins", sans-serif;
+  font-family: "Lato", sans-serif;
     color: #444444;
 }
 
