--- a/src/main/resources/static/web/assets/css/productdetails.css
+++ b/src/main/resources/static/web/assets/css/productdetails.css
@@ -46,7 +46,7 @@ h4 {
 }
 
 .col-md-7 h2{
-    color:rgb(0, 0, 0);
+    color:#555;
     font-size: 30px;
     font-weight: bold;
     margin: 0px 0px 23px 0px;
