--- a/src/main/resources/static/web/assets/css/style.css
+++ b/src/main/resources/static/web/assets/css/style.css
@@ -38,6 +38,20 @@ img {
   max-width: 100%;
 }
 
+.modal{
+  background-color: #2929299a;
+}
+
+.close-modal{
+  position: absolute !important;
+  top: 10px !important;
+  right: 15px !important;
+  font-size: 1.5rem !important;
+}
+.form-modal{
+  width: 40% !important;
+}
+
 
 a:focus,
 input:focus,
