workouts funcionando falta agregar alertas

--- a/src/main/resources/static/web/assets/css/style.css
+++ b/src/main/resources/static/web/assets/css/style.css
@@ -51,6 +51,13 @@ img {
 .form-modal{
   width: 40% !important;
 }
+.link1{
+  position: absolute !important;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
 
 
 a:focus,
